[bdist_wheel]
universal=0

[metadata]
license_file = LICENSE

[nosetests]
warningfilters=module   |.*            |DeprecationWarning |notebook.*
               default  |.* | Warning | notebook.*
               ignore   |.*metadata.*  |DeprecationWarning |notebook.*
               ignore   |.*schema.*    |UserWarning        |nbfor.*
               ignore   |The 'warn' method is deprecated, use 'warning' instead     | DeprecationWarning |notebook.*
               error    |encodestring\(\) is a deprecated alias, use encodebytes\(\)| DeprecationWarning | notebook.*
               error    |decodestring\(\) is a .*| DeprecationWarning | notebook.*
