[metadata]
name = retrolab
version = attr: retrolab._version.__version__
description = JupyterLab Distribution with a retro look and feel
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyterlab/retrolab
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Notebook
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jupyterlab>=4.0.0a20,<5
	jupyterlab_server~=2.3
	jupyter_server~=1.4
	nbclassic~=0.2
	tornado>=6.1.0

[options.entry_points]
console_scripts =
    jupyter-retro = retrolab.app:main
