[metadata]
name = notebook
version = attr: notebook._version.__version__
description = Jupyter Notebook - A web-based notebook environment for interactive computing
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter/notebook
platforms = Linux, Mac OS X, Windows
project_urls =
    Documentation = https://jupyter-notebook.readthedocs.io/
    Source = https://github.com/jupyter/notebook
    Tracker = https://github.com/jupyter/notebook/issues
keywords = Jupyter, JupyterLab, Notebook
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    notebook_shim>=0.1,<0.2
    jupyterlab>=4.0.0a23,<5
    jupyterlab_server>=2.13,<3
    jupyter_server>=1.16.0,<2
	tornado>=6.1.0

[options.extras_require]
test =
    coverage
    nbval
    pytest>=6.0
    pytest-cov
    requests
    pytest-tornasync
    pytest-timeout
    pytest-console-scripts
    ipykernel
    pre-commit
    jupyterlab_server[test]>=2.13,<3

[options.packages.find]
exclude =
    docs.*
    tests
    tests.*

[options.entry_points]
console_scripts =
    jupyter-notebook = notebook.app:main

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
